<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInserir">

    <TextView
        android:id="@+id/titulo_tela_inserir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserir_fazenda"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sp_opcoes_fazenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/sp_opcoes_fazenda"
        android:layout_width="229dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/et_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tela_inserir"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/et_cnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_opcoes_fazenda"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_cnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cnpj"
        app:layout_constraintBottom_toTopOf="@+id/et_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/car"
        app:layout_constraintBottom_toTopOf="@+id/et_caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cnpj"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_caixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/caixa"
        app:layout_constraintBottom_toTopOf="@+id/et_valor5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_car"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_valor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_inserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_caixa"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_inserir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserir_fazenda"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_tela_inserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_valor5"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_home_tela_inserir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inserir"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>