<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaAtualizar">

    <TextView
        android:id="@+id/titulo_tela_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atualizar Fazenda"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_cnpj_atualiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_nome_atualiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_caixa_atualiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar_atualiza"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_caixa_atualiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/caixa"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome_atualiza"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atualizar"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_atualiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_caixa_atualiza"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_home_atualiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_atualizar"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_cnpj_atualiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cnpj"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_buscar_atualiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tela_atualizar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_buscar_atualiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buscar"
        app:layout_constraintBottom_toTopOf="@+id/et_nome_atualiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cnpj_atualiza"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>